# pop2-vita

./: .gitignore  CMakeLists.txt  README.md
livearea/: template.xml
loader/: config.h  dialog.c  main.c  so_util.c  splash.c  splash.h
